--- a/config.env
+++ b/config.env
@@ -11,7 +11,7 @@ SESSION_STRING = "BQCzfSUAv697_rv2o0WpcKGyXuNVTufPMesjZkfcIXudZ-b7bIlkyMWbanv-AQ
 # MULTI_TOKEN2 = "" (upto 50)
 
 # Web Config
-BASE_URL = ""
+BASE_URL = "http://20.2.232.134"
 PORT = "8080"
 
 # Login Details
